--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,7 +163,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="10. Regular Expression Matching.cpp" />
     <ClCompile Include="100. Same Tree.cpp" />
     <ClCompile Include="101. symmetric-tree.cpp" />
     <ClCompile Include="102. binary-tree-level-order-traversal.cpp" />
@@ -216,10 +215,34 @@
     <ClCompile Include="149. max-points-on-a-line.cpp" />
     <ClCompile Include="150. evaluate-reverse-polish-notation.cpp" />
     <ClCompile Include="151. reverse-words-in-a-string.cpp" />
+    <ClCompile Include="152. maximum-product-subarray.cpp" />
+    <ClCompile Include="153. find-minimum-in-rotated-sorted-array.cpp" />
+    <ClCompile Include="154. find-minimum-in-rotated-sorted-array-ii.cpp" />
+    <ClCompile Include="155. min-stack.cpp" />
+    <ClCompile Include="160. intersection-of-two-linked-lists.cpp" />
+    <ClCompile Include="162. find-peak-element.cpp" />
+    <ClCompile Include="171. excel-sheet-column-number.cpp" />
+    <ClCompile Include="172. factorial-trailing-zeroes.cpp" />
+    <ClCompile Include="173. binary-search-tree-iterator.cpp" />
+    <ClCompile Include="174. dungeon-game.cpp" />
+    <ClCompile Include="179. largest-number.cpp" />
+    <ClCompile Include="187. repeated-dna-sequences.cpp" />
+    <ClCompile Include="188. best-time-to-buy-and-sell-stock-iv.cpp" />
+    <ClCompile Include="189. rotate-array.cpp" />
+    <ClCompile Include="190. reverse-bits.cpp" />
+    <ClCompile Include="191. number-of-1-bits.cpp" />
+    <ClCompile Include="198. house-robber.cpp" />
+    <ClCompile Include="199. binary-tree-right-side-view.cpp" />
+    <ClCompile Include="200. number-of-islands.cpp" />
+    <ClCompile Include="201. bitwise-and-of-numbers-range.cpp" />
+    <ClCompile Include="基数排序164. maximum-gap.cpp" />
+    <ClCompile Include="165. compare-version-numbers.cpp" />
+    <ClCompile Include="166. fraction-to-recurring-decimal.cpp" />
+    <ClCompile Include="167. two-sum-ii-input-array-is-sorted.cpp" />
+    <ClCompile Include="168. excel-sheet-column-title.cpp" />
+    <ClCompile Include="摩尔投票169. majority-element.cpp" />
     <ClCompile Include="51. N-Queens.cpp" />
     <ClCompile Include="52. N-Queens II.cpp" />
-    <ClCompile Include="5207. get-equal-substrings-within-budget.cpp" />
-    <ClCompile Include="5208.minimum-moves-to-reach-target-with-rotations.cpp" />
     <ClCompile Include="53. Maximum Subarray.cpp" />
     <ClCompile Include="54. Spiral Matrix.cpp" />
     <ClCompile Include="55. Jump Game.cpp" />
@@ -242,12 +265,11 @@
     <ClCompile Include="72. Edit Distance.cpp" />
     <ClCompile Include="73. Set Matrix Zeroes.cpp" />
     <ClCompile Include="74. Search a 2D Matrix.cpp" />
-    <ClCompile Include="75. Sort Colors.cpp" />
+    <ClCompile Include="三路快排75. Sort Colors.cpp" />
     <ClCompile Include="76. Minimum Window Substring.cpp" />
     <ClCompile Include="77. Combinations.cpp" />
     <ClCompile Include="78. Subsets.cpp" />
     <ClCompile Include="79. Word Search.cpp" />
-    <ClCompile Include="8. String to Integer (atoi).cpp" />
     <ClCompile Include="80. Remove Duplicates from Sorted Array II.cpp" />
     <ClCompile Include="81. Search in Rotated Sorted Array II.cpp" />
     <ClCompile Include="82. Remove Duplicates from Sorted List II.cpp" />
