--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -235,6 +235,26 @@
     <ClCompile Include="199. binary-tree-right-side-view.cpp" />
     <ClCompile Include="200. number-of-islands.cpp" />
     <ClCompile Include="201. bitwise-and-of-numbers-range.cpp" />
+    <ClCompile Include="202. happy-number.cpp" />
+    <ClCompile Include="203. remove-linked-list-elements.cpp" />
+    <ClCompile Include="204. count-primes.cpp" />
+    <ClCompile Include="205. isomorphic-strings.cpp" />
+    <ClCompile Include="206. reverse-linked-list.cpp" />
+    <ClCompile Include="207. course-schedule.cpp" />
+    <ClCompile Include="208. implement-trie-prefix-tree.cpp" />
+    <ClCompile Include="209. minimum-size-subarray-sum.cpp" />
+    <ClCompile Include="210. course-schedule-ii.cpp" />
+    <ClCompile Include="211. add-and-search-word-data-structure-design.cpp" />
+    <ClCompile Include="212. word-search-ii.cpp" />
+    <ClCompile Include="213. house-robber-ii.cpp" />
+    <ClCompile Include="221. maximal-square.cpp" />
+    <ClCompile Include="Manacher算法214. shortest-palindrome.cpp" />
+    <ClCompile Include="215. kth-largest-element-in-an-array.cpp" />
+    <ClCompile Include="216. combination-sum-iii.cpp" />
+    <ClCompile Include="217. contains-duplicate.cpp" />
+    <ClCompile Include="218. the-skyline-problem.cpp" />
+    <ClCompile Include="219. contains-duplicate-ii.cpp" />
+    <ClCompile Include="220. contains-duplicate-iii.cpp" />
     <ClCompile Include="基数排序164. maximum-gap.cpp" />
     <ClCompile Include="165. compare-version-numbers.cpp" />
     <ClCompile Include="166. fraction-to-recurring-decimal.cpp" />
