更新leetcode 241-280, 算法未上锁题目

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -256,6 +256,19 @@
     <ClCompile Include="227. basic-calculator-ii.cpp" />
     <ClCompile Include="228. summary-ranges.cpp" />
     <ClCompile Include="241. different-ways-to-add-parentheses.cpp" />
+    <ClCompile Include="242. valid-anagram.cpp" />
+    <ClCompile Include="257. binary-tree-paths.cpp" />
+    <ClCompile Include="258. add-digits.cpp" />
+    <ClCompile Include="260. single-number-iii.cpp" />
+    <ClCompile Include="263. ugly-number.cpp" />
+    <ClCompile Include="264. ugly-number-ii.cpp" />
+    <ClCompile Include="268. missing-number.cpp" />
+    <ClCompile Include="273. integer-to-english-words.cpp" />
+    <ClCompile Include="274. h-index.cpp" />
+    <ClCompile Include="275. h-index-ii.cpp" />
+    <ClCompile Include="278. first-bad-version.cpp" />
+    <ClCompile Include="279. perfect-squares.cpp" />
+    <ClCompile Include="282. expression-add-operators.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
